--- a/7_REZ_power.ipynb
+++ b/7_REZ_power.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "e751ef1e-561a-466e-9d52-fc24a38cb20e",
    "metadata": {},
    "outputs": [],
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "110fe4e4-c193-41f5-a258-b9de322e105f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
-    "walltime = \"00:50:00\"\n",
+    "walltime = \"00:10:00\"\n",
     "cores = 48\n",
     "memory = str(4 * cores) + \"GB\"\n",
     "\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "1604c7e6-ee20-4ea2-91f3-bf10ec5874bf",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "f9fc9dc4-49ef-4215-b12b-b0151c9d0a2f",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-562953e8-6a8c-11ef-8912-000007bbfe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-324a3155-6b0d-11ef-9022-000007fbfe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -101,7 +101,7 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">dfe496b3</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">313bc056</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
@@ -132,11 +132,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-9a822063-9983-4c2e-9b10-6d31b904d63b</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-31a40b28-83fe-4711-b417-774b961dbef4</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.4:43581\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.1:34049\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -182,10 +182,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.121.4:43581' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.1:34049' processes=0 threads=0, memory=0 B>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "07af249d-6c3f-44d1-90bf-9d2b63224a2c",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c8898724-1b02-4519-93f4-b8c32c61d12e",
    "metadata": {},
    "outputs": [],
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2e35a159-901f-4d5c-8ec4-8fe6c3282629",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5ea96f76-cd3d-4c70-a8d1-21dfc64d95ec",
    "metadata": {},
    "outputs": [],
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "565eacd7-1166-49f5-bb83-ef695f653ebd",
    "metadata": {},
    "outputs": [],
@@ -895,6 +895,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2978fca8-6b59-42e0-afa1-4ab241ed437e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existing_wind\n",
+      "Existing_solar\n",
+      "CPU times: user 3min 50s, sys: 12.2 s, total: 4min 2s\n",
+      "Wall time: 4min 29s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# for scenario in gen.columns[14:]:\n",
+    "for scenario in [\"Existing_wind\", \"Existing_solar\"]:\n",
+    "    print(scenario)\n",
+    "    gen_ds = calc_all_years_generation(years, mask, gen[scenario], scale_mask=\"even\")\n",
+    "    gen_ds = gen_ds.to_dataset(name=\"power\")\n",
+    "    \n",
+    "    # Tidy path to write\n",
+    "    if scenario.split(\"_\")[-1] == \"(MW)\":\n",
+    "        scenario = scenario[:-5]\n",
+    "    scenario = scenario.lower()\n",
+    "    \n",
+    "    gen_ds.to_netcdf(\n",
+    "        fp + \"REZ_power_even_weights_\" + scenario + \"_van_der_Wiel\" + \"_era5_hourly_\" + str(years[0]) + \"-\" + str(years[-1]) + \".nc\"\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bedadb29-8a9f-4865-94ef-33eddd765902",
    "metadata": {},
@@ -904,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 39,
    "id": "c9d4f47e-9fc2-4001-84a5-c787bc338327",
    "metadata": {},
    "outputs": [],
@@ -918,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 40,
    "id": "0ee83af4-1577-47f4-a96e-bc7f0db2de50",
    "metadata": {},
    "outputs": [],
@@ -931,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 42,
    "id": "08e25dc1-d8b4-472a-8c95-04b6367faa54",
    "metadata": {},
    "outputs": [
@@ -973,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "51a6eef2-db8b-45b9-99e6-9019c29b0ae7",
    "metadata": {},
    "outputs": [],
