artificial Q2 wind scenario

--- a/07_REZ_power.ipynb
+++ b/07_REZ_power.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "e751ef1e-561a-466e-9d52-fc24a38cb20e",
    "metadata": {},
    "outputs": [],
@@ -21,21 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "110fe4e4-c193-41f5-a258-b9de322e105f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/g/data/w42/dr6273/apps/conda/envs/pangeo/lib/python3.10/site-packages/distributed/node.py:182: UserWarning: Port 8787 is already in use.\n",
-      "Perhaps you already have a cluster running?\n",
-      "Hosting the HTTP server on port 40899 instead\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# One node on Gadi has 48 cores - try and use up a full node before going to multiple nodes (jobs)\n",
     "\n",
@@ -55,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "1604c7e6-ee20-4ea2-91f3-bf10ec5874bf",
    "metadata": {},
    "outputs": [],
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "f9fc9dc4-49ef-4215-b12b-b0151c9d0a2f",
    "metadata": {},
    "outputs": [
@@ -77,7 +66,7 @@
        "    <div style=\"width: 24px; height: 24px; background-color: #e1e1e1; border: 3px solid #9D9D9D; border-radius: 5px; position: absolute;\"> </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px;\">Client</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-c824a8f1-dd30-11ef-bafe-000007c3fe80</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Client-8c893cc9-ddd1-11ef-aa89-000007c3fe80</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "\n",
        "        <tr>\n",
@@ -90,7 +79,7 @@
        "        \n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard: </strong> <a href=\"/proxy/40899/status\" target=\"_blank\">/proxy/40899/status</a>\n",
+       "                    <strong>Dashboard: </strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\"></td>\n",
        "            </tr>\n",
@@ -99,7 +88,7 @@
        "        </table>\n",
        "\n",
        "        \n",
-       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/40899/status\" }'>\n",
+       "            <button style=\"margin-bottom: 12px;\" data-commandlinker-command=\"dask:populate-and-launch-layout\" data-commandlinker-args='{\"url\": \"/proxy/8787/status\" }'>\n",
        "                Launch dashboard in JupyterLab\n",
        "            </button>\n",
        "        \n",
@@ -112,11 +101,11 @@
        "    </div>\n",
        "    <div style=\"margin-left: 48px;\">\n",
        "        <h3 style=\"margin-bottom: 0px; margin-top: 0px;\">PBSCluster</h3>\n",
-       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">b515d1ec</p>\n",
+       "        <p style=\"color: #9D9D9D; margin-bottom: 0px;\">c8af2139</p>\n",
        "        <table style=\"width: 100%; text-align: left;\">\n",
        "            <tr>\n",
        "                <td style=\"text-align: left;\">\n",
-       "                    <strong>Dashboard:</strong> <a href=\"/proxy/40899/status\" target=\"_blank\">/proxy/40899/status</a>\n",
+       "                    <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                </td>\n",
        "                <td style=\"text-align: left;\">\n",
        "                    <strong>Workers:</strong> 0\n",
@@ -143,11 +132,11 @@
        "        <div style=\"width: 24px; height: 24px; background-color: #FFF7E5; border: 3px solid #FF6132; border-radius: 5px; position: absolute;\"> </div>\n",
        "        <div style=\"margin-left: 48px;\">\n",
        "            <h3 style=\"margin-bottom: 0px;\">Scheduler</h3>\n",
-       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-b81a2253-083c-4700-8f1f-56b6b77ebfdc</p>\n",
+       "            <p style=\"color: #9D9D9D; margin-bottom: 0px;\">Scheduler-6dbbaca2-065a-4ca3-880b-8c758d4d0c72</p>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Comm:</strong> tcp://10.6.121.1:34511\n",
+       "                        <strong>Comm:</strong> tcp://10.6.121.1:39561\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Workers:</strong> 0\n",
@@ -155,7 +144,7 @@
        "                </tr>\n",
        "                <tr>\n",
        "                    <td style=\"text-align: left;\">\n",
-       "                        <strong>Dashboard:</strong> <a href=\"/proxy/40899/status\" target=\"_blank\">/proxy/40899/status</a>\n",
+       "                        <strong>Dashboard:</strong> <a href=\"/proxy/8787/status\" target=\"_blank\">/proxy/8787/status</a>\n",
        "                    </td>\n",
        "                    <td style=\"text-align: left;\">\n",
        "                        <strong>Total threads:</strong> 0\n",
@@ -193,10 +182,10 @@
        "</div>"
       ],
       "text/plain": [
-       "<Client: 'tcp://10.6.121.1:34511' processes=0 threads=0, memory=0 B>"
+       "<Client: 'tcp://10.6.121.1:39561' processes=0 threads=0, memory=0 B>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93146e58-ecad-4b7b-a0f4-cc65e6f8724d",
    "metadata": {},
    "outputs": [],
@@ -218,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9d3ead5d-258f-4617-9e66-128e2a75de80",
    "metadata": {},
    "outputs": [
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5d58c151-da0f-46d0-8453-ce3124658dfd",
    "metadata": {},
    "outputs": [],
@@ -264,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3f8708a2-05db-497d-aeb8-67dd1432e300",
    "metadata": {},
    "outputs": [],
@@ -282,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c2cd8a6f-9879-42e8-8d1a-d5c58a53734a",
    "metadata": {},
    "outputs": [],
@@ -292,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9c33430f-53e8-4074-82be-811d6621408f",
    "metadata": {},
    "outputs": [],
@@ -304,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "24278640-949e-4901-8f99-e3cc29004bcf",
    "metadata": {},
    "outputs": [],
@@ -321,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "31f819a2-c499-4a97-b93c-b3592e58d654",
    "metadata": {},
    "outputs": [
@@ -1849,7 +1838,7 @@
        "[43 rows x 22 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1871,49 +1860,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2ba689e5-3a10-4996-aa95-a50fa99e7c4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Solar_renewable_potential_(MW)     1100\n",
-       "Wind_renewable_potential_(MW)      2280\n",
-       "Existing_solar                        0\n",
-       "Progressive_solar_2029-30             0\n",
-       "Progressive_solar_2039-40             0\n",
-       "Progressive_solar_2049-50             0\n",
-       "Step_change_solar_2029-30             0\n",
-       "Step_change_solar_2039-40             0\n",
-       "Step_change_solar_2049-50             0\n",
-       "Green_energy_solar_2029-30            0\n",
-       "Green_energy_solar_2039-40         1650\n",
-       "Green_energy_solar_2049-50        23500\n",
-       "Existing_wind                       332\n",
-       "Progressive_wind_2029-30           1032\n",
-       "Progressive_wind_2039-40           1032\n",
-       "Progressive_wind_2049-50           1382\n",
-       "Step_change_wind_2029-30           1082\n",
-       "Step_change_wind_2039-40           1132\n",
-       "Step_change_wind_2049-50           1432\n",
-       "Green_energy_wind_2029-30          1282\n",
-       "Green_energy_wind_2039-40          9682\n",
-       "Green_energy_wind_2049-50         19732\n",
-       "Name: Q1, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gen.loc[\"Q1\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "7071630a-ab38-4618-98bf-06d87c320af0",
    "metadata": {},
@@ -1926,7 +1872,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
+   "id": "f227acf8-ac33-4d4d-9014-5bf919ffbcda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace Step change 2049-50 wind in Q1 with green energy scenario\n",
+    "gen[\"artificial_Q2_wind_2049-50\"] = gen[\"Step_change_wind_2049-50\"].copy()\n",
+    "gen.loc[\"Q2\", \"artificial_Q2_wind_2049-50\"] = gen.loc[\"Q2\"][\"Green_energy_wind_2049-50\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "4c365559-ec53-4792-b9f5-74f7ffb818f1",
    "metadata": {},
    "outputs": [],
@@ -1938,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "e2201aad-da06-45cb-af24-c1d43bc9f30a",
    "metadata": {},
    "outputs": [],
@@ -1950,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "78c27bfb-e820-4d64-8a4a-edddfabce395",
    "metadata": {},
    "outputs": [
@@ -1980,12 +1938,13 @@
        "Green_energy_wind_2039-40            0\n",
        "Green_energy_wind_2049-50            0\n",
        "artificial_Q1_wind_2049-50           0\n",
+       "artificial_Q2_wind_2049-50           0\n",
        "artificial_N10_wind_2049-50       5200\n",
        "artificial_N11_wind_2049-50          0\n",
        "Name: N10, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "e93e4b7d-a18c-4248-a53d-bba53b4875c3",
    "metadata": {},
    "outputs": [
@@ -2006,7 +1965,7 @@
        "13.779329608938548"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2025,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "ebb57503-1fc1-400c-b179-07d011e12cf9",
    "metadata": {},
    "outputs": [],
@@ -2049,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "0c7c55cd-ad51-4575-9396-9698f17d808e",
    "metadata": {},
    "outputs": [],
@@ -2059,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "68b1250e-7361-443c-ade2-68ca5063d7c8",
    "metadata": {},
    "outputs": [],
@@ -2069,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "7030566a-1da2-4ad1-9016-39d5bb38b111",
    "metadata": {},
    "outputs": [],
@@ -2079,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "a4d7bbb1-f527-4e3c-8fb3-ee041187a70f",
    "metadata": {},
    "outputs": [],
@@ -2102,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "07af249d-6c3f-44d1-90bf-9d2b63224a2c",
    "metadata": {},
    "outputs": [],
@@ -2131,7 +2090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "c8898724-1b02-4519-93f4-b8c32c61d12e",
    "metadata": {},
    "outputs": [],
@@ -2168,7 +2127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "2e35a159-901f-4d5c-8ec4-8fe6c3282629",
    "metadata": {},
    "outputs": [],
@@ -2196,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "5ea96f76-cd3d-4c70-a8d1-21dfc64d95ec",
    "metadata": {},
    "outputs": [],
@@ -2253,28 +2212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "33a56215-7940-4a4c-a2a1-382d375bca3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['artificial_N11_wind_2049-50'], dtype='object')"
+       "Index(['artificial_Q2_wind_2049-50'], dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gen.columns[-1:]"
+    "gen.columns[-3:-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "id": "b198a08e-a96b-4350-845d-ec1a97282ba4",
    "metadata": {},
    "outputs": [
@@ -2282,15 +2241,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "artificial_N11_wind_2049-50\n",
-      "CPU times: user 1min 58s, sys: 2.98 s, total: 2min 1s\n",
-      "Wall time: 2min 6s\n"
+      "artificial_Q2_wind_2049-50\n",
+      "CPU times: user 1min 34s, sys: 3.01 s, total: 1min 37s\n",
+      "Wall time: 1min 55s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "for scenario in gen.columns[-1:]:\n",
+    "for scenario in gen.columns[-3:-2]:\n",
     "# for scenario in [\"Existing_wind\", \"Existing_solar\"]:\n",
     "    print(scenario)\n",
     "    gen_ds = calc_all_years_generation(years, mask, gen[scenario])\n",
@@ -2421,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "id": "51a6eef2-db8b-45b9-99e6-9019c29b0ae7",
    "metadata": {},
    "outputs": [],
